fix: Mobile jump speed

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -59,14 +59,16 @@ canvas {
   font-size: 20px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 962px) {
   .joystick_container {
     display: block;
   }
+
   .level {
     font-size: 16px;
     left: 10px;
   }
+
   .jump_button {
     display: flex;
   }
